--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,34 +1,24 @@
-"Adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"Fusiello":
+  - firstname: ["Andrea", "A."]
+    url: http://www.diegm.uniud.it/fusiello/
 
-"Podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+"Arrigoni":
+  - firstname: ["Federica", "F."]
+    url: https://scholar.google.it/citations?user=bzBtqfQAAAAJ&hl=it
 
-"Rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+"Boracchi":
+  - firstname: ["Giacomo", "G."]
+    url: https://boracchi.faculty.polimi.it
 
-"Bach": 
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
+"Leveni":
+  - firstname: ["Filippo", "F."]
+    url:
 
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
-
-"Przibram":
-  - firstname: ["Karl"]
-    url: https://link.springer.com/article/10.1007/s00016-019-00242-z
-
-"Schrödinger":
-  - firstname: ["Erwin"]
-    url: https://en.wikipedia.org/wiki/Erwin_Schr%C3%B6dinger
-
-"Lorentz":
-  - firstname: ["Hendrik Antoon"]
-    url: https://en.wikipedia.org/wiki/Hendrik_Lorentz
-
-"Planck":
-  - firstname: ["Max"]
-    url: https://en.wikipedia.org/wiki/Max_Planck
+"Padja":
+  - firstname: ["Tomas", "T."]
+    url: https://people.ciirc.cvut.cz/~pajdla/
+    
+"Toldo":
+  - firstname: ["Roberto", "R."]
+    url: https://www.3dflow.net
+    
