--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ linkedin_username: magri-luca # your LinkedIn user name
 scholar_userid: https://scholar.google.com/citations?user=dF3qKXMAAAAJ&hl=it # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
-orcid_id: https://orcid.org/0000-0002-0598-8279 # your ORCID ID
+orcid_id: 0000-0002-0598-8279 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
