--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -26,6 +26,6 @@
   - firstname: ["Andrea", "A."]
     url: https://scholar.google.com/citations?user=2kS6qIoAAAAJ&hl=en
 
-"Rizzo"
+"Rizzo":
   - firstname: ["Antonino Maria", "A.M."]
   - url: https://antoninomariarizzo.github.io/
